--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <title>
 Gradiance Online Accelerated Learning
 </title>
+
+<!--Importing style doc for testing purposes-->
+<link rel="stylesheet" href="./ChromeExtension/style.css">
+
 <style type="text/css">
 <!--
 .tinyfont {font-size: 7pt; font-family: "Geneva, Arial, Helvetica, sans-serif";}
