removed useless right table column

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ Gradiance Online Accelerated Learning
 <!--Importing style doc for testing purposes-->
 <link rel="stylesheet" href="./ChromeExtension/style.css">
 
+
 <style type="text/css">
 <!--
 .tinyfont {font-size: 7pt; font-family: "Geneva, Arial, Helvetica, sans-serif";}
@@ -1303,5 +1304,8 @@ Identify one of those values from the list below.
 </td>
 </tr>
 </table>
+
+<!--Import script-->
+<script src="./ChromeExtension/content.js"></script>
 </body>
 </html>
