--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ Gradiance Online Accelerated Learning
 .bigfont {font-size: 14pt; font-family: "Geneva, Arial, Helvetica, sans-serif";}
 .hugefont {font-size: 18pt; font-family: "Geneva, Arial, Helvetica, sans-serif";}
 .bodybackground {background-color: #FFE5D0; font-size: 11pt; font-family: "Geneva, Arial, Helvetica, sans-serif"; color: black; }
-.darkbackgroundwithnormalfont {background-image: url(../gifs/brushed_metal_dkblue.jpg); font-size: 11pt; font-family: "Geneva, Arial, Helvetica, sans-serif"; color: white; }
-.darkbackgroundwithhugefont {background-image: url(../gifs/brushed_metal_dkblue.jpg); font-size: 15pt; font-family: "Geneva, Arial, Helvetica, sans-serif"; color: white; }
+.darkbackgroundwithnormalfont {background-image: url(brushed_metal_dkblue.jpeg); font-size: 11pt; font-family: "Geneva, Arial, Helvetica, sans-serif"; color: white; }
+.darkbackgroundwithhugefont {background-image: url(brushed_metal_dkblue.jpeg); font-size: 15pt; font-family: "Geneva, Arial, Helvetica, sans-serif"; color: white; }
 .marginbackground {background-color: #FFE5D0; font-size: 11pt; font-family: "Geneva, Arial, Helvetica, sans-serif"; color: black; }
 .lightbackgroundwithnormalfont {background-color: #BBDDFF; font-size: 11pt; font-family: "Geneva, Arial, Helvetica, sans-serif"; color: black; }
 .lightbackgroundwithtinyfont {background-color: #FFE5D0; font-size: 7pt; font-family: "Geneva, Arial, Helvetica, sans-serif"; color: black; }
