--- a/page3.html
+++ b/page3.html
@@ -16,8 +16,8 @@ Gradiance Online Accelerated Learning
 .bigfont {font-size: 14pt; font-family: "Geneva, Arial, Helvetica, sans-serif";}
 .hugefont {font-size: 18pt; font-family: "Geneva, Arial, Helvetica, sans-serif";}
 .bodybackground {background-color: #FFE5D0; font-size: 11pt; font-family: "Geneva, Arial, Helvetica, sans-serif"; color: black; }
-.darkbackgroundwithnormalfont {background-image: url(../gifs/brushed_metal_dkblue.jpg); font-size: 11pt; font-family: "Geneva, Arial, Helvetica, sans-serif"; color: white; }
-.darkbackgroundwithhugefont {background-image: url(../gifs/brushed_metal_dkblue.jpg); font-size: 15pt; font-family: "Geneva, Arial, Helvetica, sans-serif"; color: white; }
+.darkbackgroundwithnormalfont {background-image: url(brushed_metal_dkblue.jpeg); font-size: 11pt; font-family: "Geneva, Arial, Helvetica, sans-serif"; color: white; }
+.darkbackgroundwithhugefont {background-image: url(brushed_metal_dkblue.jpeg); font-size: 15pt; font-family: "Geneva, Arial, Helvetica, sans-serif"; color: white; }
 .marginbackground {background-color: #FFE5D0; font-size: 11pt; font-family: "Geneva, Arial, Helvetica, sans-serif"; color: black; }
 .lightbackgroundwithnormalfont {background-color: #BBDDFF; font-size: 11pt; font-family: "Geneva, Arial, Helvetica, sans-serif"; color: black; }
 .lightbackgroundwithtinyfont {background-color: #FFE5D0; font-size: 7pt; font-family: "Geneva, Arial, Helvetica, sans-serif"; color: black; }
@@ -38,7 +38,7 @@ a {text-decoration: none;}
 <tr style="height: 61px; border-bottom-width: 0px; " valign="top">
 <td>
 <a href="http://www.gradiance.com/" target="_top">
-<img alt="" src="../gifs/gradiance_logo.jpg" vspace="0px" hspace="0px" height="61px" width="190px" style="border: 0;" />
+<img alt="" src="./gradiance_logo.jpg" vspace="0px" hspace="0px" height="61px" width="190px" style="border: 0;" />
 </a>
 </td>
 </tr>
